chore(setup-test):setup test dependencies [Delivers #165149273]

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "devstart": "nodemon .bin/www",
+    "start": "node api/app.js",
+    "devstart": "nodemon --exec babel-node api/app.js",    
     "lint": "eslint"
   },
   "repository": {
@@ -17,16 +18,38 @@
     "api-endpoints",
     "ui"
   ],
-  "author": "Odejobi Olushola D.",
+  "author": "oolushola",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/oolushola/banka/issues"
   },
   "homepage": "https://github.com/oolushola/banka#readme",
   "dependencies": {
-    "express": "^4.16.4"
+    "@babel/polyfill": "^7.4.3",
+    "@babel/register": "^7.4.0",
+    "@babel/runtime": "^7.4.3",
+    "bcrypt": "^3.0.5",
+    "bcrypt-nodejs": "0.0.3",
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.18.3",
+    "chai": "^4.2.0",
+    "chai-http": "^4.2.1",
+    "coveralls": "^3.0.3",
+    "dotenv": "^7.0.0",
+    "express": "^4.16.4",
+    "express-validator": "^5.3.1",
+    "jsonwebtoken": "^8.5.1",
+    "mocha": "^6.0.2",
+    "morgan": "^1.9.1",
+    "nyc": "^13.3.0"
   },
   "devDependencies": {
+    "@babel/cli": "^7.4.3",
+    "@babel/core": "^7.4.3",
+    "@babel/node": "^7.2.2",
+    "@babel/plugin-transform-regenerator": "^7.4.3",
+    "@babel/plugin-transform-runtime": "^7.4.3",
+    "@babel/preset-env": "^7.4.3",
     "eslint": "^5.16.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-config-airbnb-base": "^13.1.0",
