--- a/package.json
+++ b/package.json
@@ -35,6 +35,13 @@
     "@babel/polyfill": "^7.4.3",
     "@babel/register": "^7.4.0",
     "@babel/runtime": "^7.4.3",
+    "@babel/cli": "^7.4.3",
+    "@babel/core": "^7.4.3",
+    "@babel/node": "^7.2.2",
+    "@babel/plugin-transform-regenerator": "^7.4.3",
+    "@babel/plugin-transform-runtime": "^7.4.3",
+    "@babel/preset-env": "^7.4.3",
+    "babel-watch": "^7.0.0",
     "bcrypt": "^3.0.5",
     "bcrypt-nodejs": "0.0.3",
     "bcryptjs": "^2.4.3",
