chore(continous-integration):travistest build [DELIVERS #165594009]

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,17 @@
 language: node_js
 node_js:
     - "stable"
+
+addons:
+  postgresql: "9.6"
+
 cache:
   directories:
       - "node_modules"
+
+before_script:
+  - psql -c 'create database travis_ci_test;' -U postgres
+  - npm run create
 
 script:
     - npm run test
